src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Ad_Hoc_VB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Hoc VB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Booking Agency)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Source__c</fullName>
        <label>Booking Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCIBookingAgencyId__c</fullName>
        <label>CCIBookingAgencyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Account_ID__c</fullName>
        <description>CCI Finance Account ID</description>
        <label>CCI Finance Account ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason_Code__c</fullName>
        <label>CCI Cancel Reason Code</label>
        <picklist>
            <controllingField>CCI_Cancel_Reason__c</controllingField>
            <picklistValues>
                <fullName>BADCRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTREQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITMSOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACKCHANGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason_Notes__c</fullName>
        <label>CCI Cancel Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason__c</fullName>
        <label>CCI Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone/Package Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCI_Customer_ID__c</fullName>
        <description>CCI Advertiser ID</description>
        <label>CCI Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Order_ID__c</fullName>
        <description>CCI AdDesk Sales Order Id</description>
        <externalId>true</externalId>
        <label>CCI Order ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <label>Caller Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <label>Caller Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Order Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Code__c</fullName>
        <label>Cancel Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Name__c</fullName>
        <label>Cancel Reason Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Complaint_Note__c</fullName>
        <label>Complaint Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_In_CCI_By__c</fullName>
        <label>Created In CCI By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Account</label>
        <referenceTo>FinanceAccount__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Delivery_Date__c</fullName>
        <label>First Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Delivery_Date__c</fullName>
        <label>Last Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Cancelled__c</fullName>
        <label>No Of Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Dates__c</fullName>
        <label>No Of Insertions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Published__c</fullName>
        <label>No Of Published</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status_Name__c</fullName>
        <label>Order Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_For_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted For Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_1__c</fullName>
        <label>Tax 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_2__c</fullName>
        <label>Tax 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_3__c</fullName>
        <label>Tax 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Excl_Tax__c</fullName>
        <label>Total excl. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incl_Tax__c</fullName>
        <label>Total incl. tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VB_Target__c</fullName>
        <label>VB Target</label>
        <picklist>
            <picklistValues>
                <fullName>Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Back__c</fullName>
        <label>Value Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>